# SkyFire_548

./: .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  PreLoad.cmake  QUEST_The_Trainer_s_Challenge_Ace_Longpaw  README.md  THANKS.md  TODO.md  issue_template.md  readme.md  revision.h.in.cmake
dep/: CMakeLists.txt  PackageList.txt
dep/SFMT/: CMakeLists.txt  ex-ran.cpp  mersenne.cpp  mother.cpp  rancombi.cpp  randomc.h  sfmt.cpp  sfmt.h  testirandomx.cpp  userintf.cpp
dep/StormLib/: CMakeLists.txt
dep/StormLib/src/: FileStream.cpp  SBaseCommon.cpp  SBaseFileTable.cpp  SFileAddFile.cpp  SFileAttributes.cpp  SFileCompactArchive.cpp  SFileFindFile.cpp  SFileGetFileInfo.cpp  SFileListFile.cpp  SFilePatchArchives.cpp  SFileVerify.cpp  StormCommon.h  StormLib.h  StormPort.h
dep/StormLib/src/jenkins/: lookup3.c
dep/StormLib/test/: StormTest.cpp  TLogHelper.cpp
dep/acelite/: CMakeLists.txt  GNUmakefile  ace-v6.1.4_hotfix3.diff
dep/acelite/ace/: ACE_vc14.vcxproj  ACE_vc14.vcxproj.filters  ACE_vs2017.vcxproj  ACE_vs2017.vcxproj.filters  ACE_vs2019.vcxproj  ACE_vs2019.vcxproj.filters  ACE_vs2022.vcxproj  ACE_vs2022.vcxproj.filters  ARGV.cpp  Abstract_Timer_Queue.h  Auto_Event.cpp  Auto_Ptr.h  CMakeLists.txt  Cache_Map_Manager_T.h  Event.cpp  GNUmakefile  GNUmakefile.ACE  IOStream_T.h  Malloc_T.cpp  Manual_Event.cpp  Message_Block_T.cpp  OS_NS_dlfcn.inl  OS_NS_sys_socket.cpp  OS_NS_sys_socket.h  OS_NS_sys_socket.inl  Process_Manager.cpp  SOCK_Dgram.cpp  SOCK_Dgram.h  SOCK_Dgram.inl  Timer_Queue_Iterator.cpp  Tokenizer_T.cpp  UPIPE_Stream.cpp  ace_vc14.sln  ace_vs2017.sln  ace_vs2019.sln  ace_vs2022.sln  config-macros.h  config-win32-common.h  config-win32-msvc.h  config.h
dep/acelite/ace/Compression/: ACE_Compression_vc14.vcxproj  ACE_Compression_vc14.vcxproj.filters  ACE_Compression_vs2017.vcxproj  ACE_Compression_vs2017.vcxproj.filters  ACE_Compression_vs2019.vcxproj  ACE_Compression_vs2019.vcxproj.filters  ACE_Compression_vs2022.vcxproj  ACE_Compression_vs2022.vcxproj.filters  Compression_vc14.sln  Compression_vs2017.sln  Compression_vs2019.sln  Compression_vs2022.sln  GNUmakefile  GNUmakefile.ACE_Compression
dep/acelite/ace/ETCL/: ACE_ETCL_Parser_vc14.vcxproj  ACE_ETCL_Parser_vc14.vcxproj.filters  ACE_ETCL_Parser_vs2017.vcxproj  ACE_ETCL_Parser_vs2017.vcxproj.filters  ACE_ETCL_Parser_vs2019.vcxproj  ACE_ETCL_Parser_vs2019.vcxproj.filters  ACE_ETCL_Parser_vs2022.vcxproj  ACE_ETCL_Parser_vs2022.vcxproj.filters  ACE_ETCL_vc14.vcxproj  ACE_ETCL_vc14.vcxproj.filters  ACE_ETCL_vs2017.vcxproj  ACE_ETCL_vs2017.vcxproj.filters  ACE_ETCL_vs2019.vcxproj  ACE_ETCL_vs2019.vcxproj.filters  ACE_ETCL_vs2022.vcxproj  ACE_ETCL_vs2022.vcxproj.filters  ETCL_vc14.sln  ETCL_vs2017.sln  ETCL_vs2019.sln  ETCL_vs2022.sln  GNUmakefile  GNUmakefile.ACE_ETCL  GNUmakefile.ACE_ETCL_Parser
dep/acelite/ace/FlReactor/: GNUmakefile  GNUmakefile.ACE_FlReactor
dep/acelite/ace/Monitor_Control/: GNUmakefile  GNUmakefile.Monitor_Control  Monitor_Control_vc14.sln  Monitor_Control_vc14.vcxproj  Monitor_Control_vc14.vcxproj.filters  Monitor_Control_vs2017.sln  Monitor_Control_vs2017.vcxproj  Monitor_Control_vs2017.vcxproj.filters  Monitor_Control_vs2019.sln  Monitor_Control_vs2019.vcxproj  Monitor_Control_vs2019.vcxproj.filters  Monitor_Control_vs2022.sln  Monitor_Control_vs2022.vcxproj  Monitor_Control_vs2022.vcxproj.filters
dep/acelite/ace/QoS/: QoS_vc14.sln  QoS_vc14.vcxproj  QoS_vc14.vcxproj.filters  QoS_vs2017.sln  QoS_vs2017.vcxproj  QoS_vs2017.vcxproj.filters  QoS_vs2019.sln  QoS_vs2019.vcxproj  (+4 more)
dep/bzip2/: CMakeLists.txt  bzip2.c
dep/g3dlite/: CMakeLists.txt  G3D-v8.0_sfhotfix1.diff
dep/g3dlite/source/: Log.cpp  System.cpp  debugAssert.cpp  format.cpp
dep/gsoap/: CMakeLists.txt  sf_changes.diff  soapC.cpp  soapH.h  soapServer.cpp  soapStub.h  stdsoap2.cpp  stdsoap2.h
dep/jemalloc/: CMakeLists.txt
dep/mysqllite/: CMakeLists.txt
dep/recastnavigation/: CMakeLists.txt
dep/recastnavigation/Detour/: CMakeLists.txt
dep/recastnavigation/Recast/: CMakeLists.txt
dep/zlib/: CMakeLists.txt
src/server/: CMakeLists.txt
src/server/authserver/: CMakeLists.txt  Main.cpp  authserver.conf.dist  authserver.rc  authserverd.service.dist
src/server/collision/: BoundingIntervalHierarchy.cpp  BoundingIntervalHierarchy.h  BoundingIntervalHierarchyWrapper.h  CMakeLists.txt  DynamicTree.cpp  DynamicTree.h  RegularGrid.h  VMapDefinitions.h  VMapTools.h
src/server/game/: CMakeLists.txt
src/server/scripts/: CMakeLists.txt
src/server/shared/: AutoPtr.h  CMakeLists.txt  Common.cpp  Common.h  CompilerDefs.h  Containers.h  Define.h  GitRevision.cpp  GitRevision.h  Memory.h  SystemConfig.h
src/server/worldserver/: CMakeLists.txt  Main.cpp  Master.cpp  Master.h  resource.h  worldserver.conf.dist  worldserver.rc  worldserverd.service.dist
src/tools/: CMakeLists.txt
src/tools/map_extractor/: CMakeLists.txt  System.cpp  adt.cpp  adt.h  dbcfile.cpp  dbcfile.h  loadlib.cpp  wdt.cpp  wdt.h
src/tools/mesh_extractor/: ADT.cpp  ADT.h  CMakeLists.txt  Cache.h  Chunk.cpp  Chunk.h  ChunkedData.cpp  ChunkedData.h  Constants.h  ContinentBuilder.cpp  ContinentBuilder.h  DBC.cpp  DBC.h  DoodadHandler.cpp  DoodadHandler.h  Geometry.cpp  Geometry.h  LiquidHandler.cpp  LiquidHandler.h  MPQ.cpp  MPQ.h  MPQManager.cpp  MPQManager.h  MapChunk.cpp  MapChunk.h  MeshExtractor.cpp  Model.cpp  Model.h  ObjectDataHandler.cpp  ObjectDataHandler.h  TileBuilder.cpp  TileBuilder.h  Utils.cpp  Utils.h  WDT.cpp  WDT.h  WorldModelGroup.cpp  WorldModelGroup.h  WorldModelHandler.cpp  WorldModelHandler.h  (+2 more)
src/tools/mmaps_generator/: CMakeLists.txt  IntermediateValues.cpp  IntermediateValues.h  MapBuilder.cpp  MapBuilder.h  PathCommon.h  PathGenerator.cpp  TerrainBuilder.cpp  TerrainBuilder.h  VMapExtensions.cpp
src/tools/vmap4_assembler/: CMakeLists.txt  VMapAssembler.cpp
src/tools/vmap4_extractor/: CMakeLists.txt  adtfile.cpp  adtfile.h  dbcfile.cpp  dbcfile.h  gameobject_extract.cpp  model.cpp  model.h  modelheaders.h  mpqfile.cpp  mpqfile.h  vec3d.h  vmapexport.cpp  vmapexport.h  wdtfile.cpp  wdtfile.h  wmo.cpp  wmo.h
(+2871 files in other folders)
